objects/Campaign_HRA__c.object
<CustomObject>
    <fields>
        <fullName>Asthma_Risk_Category__c</fullName>
        <label>Asthma Risk Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMI_Category__c</fullName>
        <label>BMI Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Back_Neck_Impairement__c</fullName>
        <label>Back Neck Impairement</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Breast_Cancer_5_Year__c</fullName>
        <label>Breast Cancer 5 Year</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Breast_Cancer_Lifetime_Risk__c</fullName>
        <label>Breast Cancer Lifetime Risk</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign HRA</relationshipLabel>
        <relationshipName>Campaign_HRA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Diabetes_Risk__c</fullName>
        <label>Diabetes Risk</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incontinence_Symptoms__c</fullName>
        <label>Incontinence Symptoms</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Baria__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interest Bariatric</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_Cardiology__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interest Cardiology</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_Emergency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interest Emergency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_Obstetrics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interest Obstetrics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_Orthopedics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interest Orthopedics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_Pediatrics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interest Pediatrics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Joint_Assessment__c</fullName>
        <label>Joint Assessment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Joint_BMI_Category__c</fullName>
        <label>Joint BMI Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Joint__c</fullName>
        <label>Joint</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Role__c</fullName>
        <label>Lead Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lifetime_Risk_Category__c</fullName>
        <label>Lifetime Risk Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lung_Screening__c</fullName>
        <label>Lung Screening</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrthoOsteoarthritis_Joint_Disease__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OrthoOsteoarthritis Joint Disease</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ortho_Pain_Type__c</fullName>
        <label>Ortho Pain Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pad_Risk_Category__c</fullName>
        <label>Pad Risk Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prostate_Risk_Category__c</fullName>
        <label>Prostate Risk Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Category_30_Years__c</fullName>
        <label>Risk Category 30 Years</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Category__c</fullName>
        <label>Risk Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seminar_Date__c</fullName>
        <label>Seminar Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stroke_Risk_Category__c</fullName>
        <label>Stroke Risk Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weight_Loss_Rec__c</fullName>
        <label>Weight Loss Rec</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weight_Loss_Surgery_Rec__c</fullName>
        <label>Weight Loss Surgery Rec</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>qoL_Impact__c</fullName>
        <label>qoL Impact</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Campaign HRA</label>
    <nameField>
        <label>Campaign HRA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign HRA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>